    - Replaced int return values by enum types
    - Added enum for periodics return codes
    - The filter is now called always before the mesh callbacks are invoked
    - Added min, max macros (if they are not already defined)
    - Added token bucket implementation with 3 policies
    - Token bucket support unlimited or tail drop queueing of packets

20110712 - 1.04
    - Added CLI show function for monitor configuration
    - Added packet filter support (untested)
    - Merged dessert-extra
    - Beautified code (a little bit)
    - libtool version = 1.10.1

20110621 - 1.03
    - When binding to the IPv6 socket for the CLI fails, IPv4 is tried
    - Introduced loglevel LOG_TRACE > LOG_DEBUG for even more verbose output
    - Several preprocessor macros in dessert.h are now contained in enums
    - Renamed variable from bool to boolean to enable include of stdbool.h
    - All printing of MAC addresses realized by MAC and EXPLODE_ARRAY6 macro
    - meshiface is not const -> remove const
    - libtool version = 1.9.1

20110530 - 1.02
    - configure will now fail when uthash or iw are missing
    - Introduced alternative names for some flags in dessert.h
    - libtool version = 1.8.1

20110530 - 1.01
    - Re-written monitor code
    - More monitor interface information availabe to routing protocols
    - add dessert_utils.c with dessert_parse_mac
    - Milisecond resolution for log messages
    - add alternative log output format (disabled by default)
    - General code cleanup
    - use MAC-Macro & EXPLODE_ARRAY6-Macro
    - add DL_LENGTH macro
    - remove %M printf pattern
    - Configure includes checks for more dependencies
    - Replaced mkinstalldirs with MKDIR_P
    - libtool version = 1.7.1

20110330 - 1.00
    - Merged RSSI branch / monitor interface support
    - Added uthash and utlist header check in configure.ac
    - libtool version = 1.6.1

20110305 - 0.99
    - Logs can now be flushed every x seconds when zlib is used